--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </main>
 
         <footer id="footer">
-            <p style="text-align:center;">&copy; Criado por <a style="color:#55d;" href="https://github.com/Gultzz">Gustavo Schultz</a></p>
+            <p style="text-align:center;">&copy; Criado por <a style="color:#55d;" target="_blank" href="https://github.com/Gultzz">Gustavo Schultz</a></p>
         </footer>
     </div>
 
