--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <main>
             <div class="center">
                 <h1 class="books">Books</h1>
+                <h1 class="pesq">Lupin</h1>
                 <div class="container"></div>
             </div>
         </main>
